Fixed centering bug on safari

--- a/src/css/favorite-filter.less
+++ b/src/css/favorite-filter.less
@@ -32,3 +32,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.favorite i {
+  margin: auto;
+}
